@@ -1,6 +1,6 @@
-## Makefile.am for the TeX Live subdirectory texk/xdvipdfmx/
+## Makefile.am for the TeX Live subdirectory texk/dvipdfmx/
 ##
-## Copyright (C) 2009, 2012 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2009-2013 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 ACLOCAL_AMFLAGS = -I ../../m4
@@ -14,4 +14,8 @@ config.force: $(ZLIB_DEPEND) $(LIBPNG_DEPEND) $(KPATHSEA_DEPEND)
 	$(SHELL) ./config.status --recheck
 
 DISTCLEANFILES = config.force
+
+## Tests
+TESTS = dvipdfmx.test
+EXTRA_DIST = $(TESTS)
 
