@@ -1,0 +1,11 @@
+#! /bin/sh
+
+# Copyright (C) 2013 Peter Breitenlohner <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
+
+# Not really a test, just making sure the program executes.
+
+TEXMFCNF=${srcdir}/../kpathsea \
+	DVIPDFMXINPUTS=${srcdir}/data \
+	src/dvipdfmx --help || exit 1
+
